# Xihe

./: CMakeLists.txt  CMakePresets.json
shaders/deferred/: geometry_mesh.frag  geometry_mesh.mesh  geometry_mesh.task
xihe/: CMakeLists.txt  test_app.cpp
xihe/scene_graph/: geometry_data.h
xihe/scene_graph/components/: mshader_lod.cpp  mshader_lod.h  mshader_mesh.cpp  mshader_mesh.h
